# ITMO_algo

./: CMakeLists.txt  README.md  p1155_Troubleduons.cpp  p1296_Hyperjump.cpp  p1401_Gamers.cpp
Block1_basics/: README.md  p1005_StonePile.cpp  p2025_LineFighting.cpp
Block2_sorts/: README.md  p3214_AChangalidi_1207_mediana.cpp  p3214_AChangalidi_1322_spy.cpp  p3214_AChangalidi_1444_elephpotams.cpp  p3214_AChangalidi_1604_fools.cpp  p3214_AChangalidi_1726_visits.cpp
Block3_data_structures/: README.md  p3214_AChangalidi_1067_disk.cpp  p3214_AChangalidi_1494_mono.cpp  p3214_AChangalidi_1521_war.cpp  p3214_AChangalidi_1628_white.cpp  p3214_AChangalidi_1650_money.cpp
Block4_graphs/: README.md  p3214_AChangalidi_1080_mapcoloring.cpp  p3214_AChangalidi_1160_network.cpp  p3214_AChangalidi_1162_exchange.cpp  p3214_AChangalidi_1450_pipelines.cpp  p3214_AChangalidi_1806_telegraphs.cpp
